# rust-rb

./: AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/adr/: 0001-spmc-two-machines.md  0002-lossy-soundness-policy.md  0003-spmc-lifecycle-contracts.md
docs/design/: spmc.md
docs/guide/: api_usage.md  configuration.md  migration.md  performance.md  semantics.md  shm_ipc.md
examples/: ab_starving.rs  bench.rs  bench_anchored.rs  bench_broadcast.rs  bench_broadcast_bytes.rs  bench_bytes.rs  bench_shm.rs  bench_shm_mc.rs  bench_spmc.rs  bench_spmc_bytes.rs  ipc_pair.rs  probe_coherence.rs  probe_ring_scaling.rs
examples/common/: mod.rs
src/: anchored.rs  anchored_bytes.rs  atomic_copy.rs  broadcast.rs  broadcast_bytes.rs  cache_padded.rs  cursor.rs  guide.rs  lib.rs  padded.rs  registry.rs  seqlock.rs  shm.rs  spmc.rs  spmc_bytes.rs  spsc.rs  spsc_bytes.rs  wait.rs
tests/: anchored.rs  anchored_bytes.rs  anchored_shm.rs  broadcast.rs  broadcast_bytes.rs  broadcast_shm.rs  shm.rs  spmc.rs  spmc_bytes.rs  spmc_shm.rs  spsc.rs  spsc_bytes.rs
