[package]
name = "rust-rb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "High-performance SPSC ring buffers — fixed-size items and variable-size byte messages — with selectable wait strategies. A faithful Rust port of cpp-fastchan."
license = "MIT"
repository = "https://github.com/geseq/rust-rb"
readme = "README.md"
keywords = ["spsc", "mpsc", "ringbuffer", "queue", "lockfree"]
categories = ["concurrency", "data-structures"]

[lib]
name = "rust_rb"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[features]
# Shared-memory-backed rings (Linux): memfd/mmap constructors, leases,
# crash recovery. Adds a `libc` dependency; no effect on other targets.
shm = ["dep:libc"]

[dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[[example]]
name = "bench"
path = "examples/bench.rs"

[[example]]
name = "bench_bytes"
path = "examples/bench_bytes.rs"
