[package]
name = "rust-rb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "High-performance SPSC ring buffers — fixed-size items and variable-size byte messages — with selectable wait strategies. A faithful Rust port of cpp-fastchan."
license = "MIT"
repository = "https://github.com/geseq/rust-rb"
readme = "README.md"
keywords = ["spsc", "ipc", "ringbuffer", "queue", "lockfree"]
categories = ["concurrency", "data-structures"]

[lib]
name = "rust_rb"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
# `rust_rb_volatile_copy` is a private dev switch (set via RUSTFLAGS, not a
# cargo feature) that swaps the broadcast ring's strict word-wise atomic
# payload copy for whole-payload volatile copies — the copy A/B benchmark
# alternative, never part of the public API.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_rb_volatile_copy)"] }

[features]
# Shared-memory-backed rings (Linux): memfd/mmap constructors, leases,
# crash recovery. Adds a `libc` dependency; no effect on other targets.
shm = ["dep:libc"]

[dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[[example]]
name = "bench"
path = "examples/bench.rs"

[[example]]
name = "bench_bytes"
path = "examples/bench_bytes.rs"

[[example]]
name = "bench_shm"
path = "examples/bench_shm.rs"
required-features = ["shm"]

[[example]]
name = "ipc_pair"
path = "examples/ipc_pair.rs"
required-features = ["shm"]
